# pre-commit-maven-nyx

./: .pre-commit-hooks.yaml  LICENSE  README.md  check_version_sync.py  pyproject.toml
pre_commit_maven_nyx/: maven_nyx_check.py
tests/: test_pattern_matching_for_branch_names.py  test_read_nyx_version.py  test_validate_liquibase_files.py
